<resources>
    <string name="app_name">Avang Todo</string>
    <string name="des_ImageView">this is description</string>
    <string name="save_changes">add Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="add_Task">New Task</string>
    <string name="highTitle">High</string>
    <string name="normalTitle">Normal</string>
    <string name="lowTitle">Low</string>
    <string name="add_a_task_for_today_hint">Write your task here…</string>
    <string name="no_to_do_list_found_en">No to-do list found..</string>
    <string name="do_you_want_to_delete_all_items">Do you want to delete all items?</string>
    <string name="cancel">Cancel</string>
    <string name="yes_i_m_sure">Yes, I\'m sure</string>
    <string name="yourTask">Your Task</string>
    <string name="today">TODAY</string>
    <string name="delete_all">Delete All</string>
    <string name="search_task">search task…</string>
    <string name="the_importance_of_your_tasks">Select the importance of the task</string>
    <string name="search_hint">Search here..</string>
    <string name="success_msg">Tasks were successfully deleted</string>
    <string name="done">DONE</string>
    <string name="do_you_want_to_exit_the_application">Click again to exit</string>
    <string name="exit">Exit</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_task">Are you sure you want to delete this task?</string>
    <string name="click_title">Click on list items :</string>
    <string name="click_des">With this action, you define the status of the task, by specifying with each click whether you have completed the selected task or not!</string>
    <string name="long_click_title">Long click or swipe on list items :</string>
    <string name="long_click_des">With this action you can edit or delete the selected task.</string>
    <string name="ok">OK got it</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="sort_lists_by">Sort by importance criterion :</string>
    <string name="ascending_sorting">Nonsignificant</string>
    <string name="descending_sorting">important</string>
    <string name="close">Close</string>
    <string name="this_change_only_applies_to_the_main_list">This change only applies to the main list</string>
    <string name="msg_deletedCompletedList">Your completed task list was successfully deleted</string>
    <string name="enter_the_name_of_the_desired_category">Enter the name of the desired category</string>
    <string name="add_category">Add Category</string>
    <string name="none">None</string>
    <string name="choose_category">Choose a category for your task (optional)</string>
    <string name="empty_error_for_add_category_input">Please enter a category title</string>
    <string name="filter">Apply Filter</string>
    <string name="all_items">All Items</string>
    <string name="filter_by_category_criterion">Filter by category criterion :</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="no_sort">Clear Sort</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="setting">Setting</string>
    <string name="developer_name">Hasan Azimi</string>

    <string name="email_id">ihasan.azimi@gmail.com</string>
    <string name="email_title">Email :</string>

    <string name="instagram_id">ihasan.azimi</string>
    <string name="instagram_title">Instagram :</string>

    <string name="linkdin_id">ihasanazimi</string>
    <string name="linkdin_title">Linkdin :</string>


    <string name="duplicatin_error">This is a duplicate category</string>
    <string name="def_cat_error">You can not delete the default category</string>

    <string name="sure">Are you sure?</string>
    <string name="yes_cats">Yes</string>
    <string name="not_confirm">Fingerprint does not match</string>
    <string name="its_true">Welcome</string>


    <string name="authentication">Authentication</string>
    <string name="auth_subtitle">Please touch the sensor to continue</string>
    <string name="auth_des">Authentication by fingerprint sensor\nRefer to device security settings to add new fingerprints</string>
    <string name="setting_auth_desssssssssssssss">Authentication by fingerprint sensor</string>
    <string name="categories_list_title">Delete categories</string>
    <string name="cat_dess">Delete the full list of available categories</string>
    <string name="try_again">Try Again</string>
    <string name="msggg">Error description :</string>

    <string name="tip">Tip for information only</string>

    <string name="msgSup">Your device does not support this feature</string>


    <string name="android_version_error">The Android version of your device does not support this feature</string>
    <string name="app_usable_title">What is the use of this application?</string>
    <string name="app_usable_des">This application is suitable for users who want to manage their daily tasks. They can prioritize their tasks and manage the status of their performance.
For example, they can write down their shopping list and easily manage their purchases by managing which purchases are prioritized or purchased.
For example, they can manage their daily to-do list in the notebook and manage their tasks in order of importance.
And see a list of their work done and work not done</string>


</resources>