<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:requiresFadingEdge="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:alpha="0.7"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:maxLines="1"
                android:paddingStart="24dp"
                android:paddingTop="24dp"
                android:paddingEnd="24dp"
                android:paddingBottom="8dp"
                android:text="@string/click_title"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_baseline_info_24" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:alpha="0.7"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:justificationMode="inter_word"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingBottom="8dp"
                android:text="@string/click_des"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal"
                tools:targetApi="o" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:alpha="0.7"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:maxLines="1"
                android:paddingStart="24dp"
                android:paddingTop="24dp"
                android:paddingEnd="24dp"
                android:paddingBottom="8dp"
                android:text="@string/long_click_title"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_baseline_info_24" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:alpha="0.7"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:justificationMode="inter_word"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingBottom="8dp"
                android:text="@string/long_click_des"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal"
                tools:targetApi="o" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:alpha="0.7"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:maxLines="1"
                android:paddingStart="24dp"
                android:paddingTop="24dp"
                android:paddingEnd="24dp"
                android:paddingBottom="8dp"
                android:text="@string/app_usable_title"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_baseline_info_24" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:alpha="0.7"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:justificationMode="inter_word"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingBottom="8dp"
                android:text="@string/app_usable_des"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal"
                tools:targetApi="o" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/strok_rectangle"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/white" />


</LinearLayout>