<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white2"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="8dp"
        android:drawableStart="@drawable/ic_outline_info_24_2"
        android:drawablePadding="12dp"
        android:gravity="start|center_vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:singleLine="true"
        android:text="@string/filter_by_category_criterion"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:drawablePadding="12dp"
        android:gravity="start|center_vertical"
        android:maxLines="2"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/this_change_only_applies_to_the_main_list"
        android:textColor="@color/grayDarker3"
        android:textSize="12sp"
        android:textStyle="bold" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/strok_rectangle"
        app:backgroundTint="@color/white">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="textStart"
            android:textDirection="locale" />

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:paddingStart="4dp"
        android:layout_marginBottom="16dp"
        android:paddingEnd="4dp"
        android:text="@string/clear_filters"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/dialogFilter_Done"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/shape_2dp"
        android:gravity="center"
        android:text="@string/filter"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />


</LinearLayout>