<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:paddingStart="28dp"
        android:paddingTop="24dp"
        android:paddingEnd="28dp"
        android:layout_gravity="center_vertical"
        android:alpha="0.7"
        android:paddingBottom="8dp"
        android:drawablePadding="8dp"
        android:text="@string/are_you_sure_you_want_to_delete_this_task"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_baseline_info_24" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:padding="6dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/noBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/strok_rectangle"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:backgroundTint="@color/gray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yesBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="14sp"
            android:background="@drawable/strok_rectangle"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/white" />


    </LinearLayout>

</LinearLayout>